Updated closePopup call to jquery method call in main.js. Added temporary fix for popup z-index bug.

--- a/app/styles/popup.less
+++ b/app/styles/popup.less
@@ -42,7 +42,7 @@ html{
     top: 0;
     left: 0;
     .borderBox;
-    z-index: 3;
+    z-index: 99999 !important;
 }
 
 #popup {
@@ -50,7 +50,6 @@ html{
     .borderBox;
     height: 100%;
     width: 100%;
-    z-index: 3;
     color: @charcoal;
     visibility: visible;
 
@@ -61,10 +60,10 @@ html{
 
 #popupHeader {
     position: absolute;
+    z-index:1;
     .borderBox;
     width: 100%;
     overflow: hidden;
-    z-index: 3;
     border-bottom: 1px solid @charcoal;
     line-height: @popupHeaderHeight;
     font-size: 16/18em;
@@ -87,7 +86,7 @@ html{
     margin-left: -1 * (@popupCarrotWidth / 2)-2; /* Half width */
     visibility: visible;
     left: 50%;
-    z-index: 5;
+    z-index: 2;
 
     height: @popupCarrotHeight;
     width: @popupCarrotWidth;
